recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:4: error: not found: value butlast
	return l.head::butlast(l.tail)
                       ^