recursion.cons.lessons.recursion.cons.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {
	if(l.tail==Nil)
	return Nil 
	return l.head::butlast(l.tail)
}
